BUGFIX: Marketplace search form spacing

--- a/DistributionPackages/Neos.MarketPlace/Resources/Private/Scss/Components/_SearchForm.scss
+++ b/DistributionPackages/Neos.MarketPlace/Resources/Private/Scss/Components/_SearchForm.scss
@@ -1,6 +1,6 @@
 .search-form {
   display: grid;
-  margin-bottom: 1em;
+  margin: 1em 0;
   grid-gap: 2rem;
   grid-auto-flow: column;
   justify-content: start;
