--- a/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Atoms/_Form.scss
+++ b/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Atoms/_Form.scss
@@ -2,13 +2,6 @@
  * Form
  */
 
-/*
- * Form wrapper elements
- */
-form {
-	margin: 0;
-}
-
 fieldset {
 	// Reset border, margin, and padding to define a consistend style accross all browsers.
 	border: 0;
